# gptcli

./: .gitignore  Cargo.toml  README.md  example-gptcli.toml
src/: lib.rs  main.rs
