[package]
name = "gptcli"
version = "0.1.0"
authors = ["Peyton Duncan <dev@peytond.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/helithumper/gptcli"
description = "A small CLI tool and Library for interacting with OpenAI APIs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
home = "0.5.4"
reqwest = { version="0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.2"
